--- a/src/styles.css
+++ b/src/styles.css
@@ -4013,7 +4013,7 @@ textarea.mat-input-element {
   padding: 30px 50px 60px 60px;
 }
 
-.headerWS {
+.headerWS, .headerAllWs {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -4130,9 +4130,6 @@ textarea.mat-input-element {
 .table_allWebServ td.mat-cell {
   border-color: #323232;
 }
-.table_allWebServ ::-webkit-scrollbar-thumb {
-  background-color: #323232;
-}
 
 .selected {
   background-color: #182128;
@@ -4195,6 +4192,68 @@ textarea.mat-input-element {
 }
 .action-divSelec .action-test {
   color: white !important;
+}
+
+.headerAllWs {
+  margin: 0px 30px;
+}
+.headerAllWs h1 {
+  flex: 1;
+  padding: 0px !important;
+}
+
+.containerAllws {
+  height: calc(100% - 110px);
+  display: flex !important;
+  padding: 0px !important;
+  margin: 0px 30px 50px 30px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  color: white;
+}
+
+.containerAllws-Options {
+  display: flex;
+  flex-direction: row;
+  height: 60px;
+  width: 100%;
+}
+
+.containerAllws-filter {
+  width: 50%;
+  float: right;
+  height: 60px;
+}
+
+.containerAllws-create {
+  width: 50%;
+  justify-content: flex-end;
+  display: flex;
+  flex-direction: row;
+  height: 60px;
+  align-items: flex-start;
+}
+
+.header-new-conn .action-img {
+  height: 25px;
+  width: 25px;
+}
+
+.td-button-delete {
+  width: 7%;
+}
+
+.selected .td-button-delete .button-delete {
+  display: flex !important;
+  height: 25px;
+  width: 100%;
+}
+.selected .td-button-delete .button-delete .mat-button-wrapper {
+  line-height: 25px !important;
+}
+
+.button-delete {
+  display: none !important;
 }
 
 /*# sourceMappingURL=styles.css.map */
