--- a/src/app/all-web-services/all-web-services.component.html
+++ b/src/app/all-web-services/all-web-services.component.html
@@ -1,86 +1,76 @@
 <div class="general-container">
-        <div class="msf-menu-header" style="display: flex; flex-direction: row; flex-wrap: wrap; margin: 0px 30px;">
-            <h1 class="ws-title" style="flex: 1; padding: 0px !important;">Web Services Summary</h1>
-        </div>
-        <mat-card class="msf-container-table msf-center-container"
-            Style="height: calc(100% - 110px); margin-bottom: 50px;  padding: 0px !important; margin: 0px 30px;">
-            <div style="display: flex; flex-direction: row; height: 100%; flex-wrap: wrap; color:white">
-                <div style="display: flex; flex-direction: row;height: 60px;width: 100%">
-                    <mat-form-field style="width:50%; float: right; height: 60px;">
-                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-                    </mat-form-field>
-                    <div
-                        style="width:50%;justify-content:flex-end;display: flex; flex-direction: row; height: 60px; align-items: flex-start; ">
-                        <div style="line-height: 42px">Create new Web Service</div>
-                        <button mat-icon-button (click)="addWebService()">
-                            <mat-icon style="color: white" aria-label="add">add_circle</mat-icon>
-                        </button>
-                    </div>
-                </div>
-                <div class="table_allWebServ">
-                    <table mat-table matSort [dataSource]="dataSource" class="datasource welcome-table"
-                        style="font-size: 12px; padding: 0px; margin: 0px;">
-    
-                        <ng-container matColumnDef="columnName">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                            <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
-                        </ng-container>
-    
-                        <ng-container matColumnDef="columnDescription">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-                            <td mat-cell *matCellDef="let element"> {{ element.description }}</td>
-                        </ng-container>
-    
-                        <ng-container matColumnDef="columnQuery">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Query</th>
-                            <td mat-cell *matCellDef="let element"> {{ element.query }}</td>
-                        </ng-container>
-    
-                        <ng-container matColumnDef="columnTables">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Tables</th>
-                            <td mat-cell *matCellDef="let element"> {{ element.stringTable }}</td>
-                        </ng-container>
-    
-                        <!-- <ng-container matColumnDef="columnEdit">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-                            <td mat-cell style="text-align: center" *matCellDef="let element">
-                                <button style="margin-right: 5px" class="button-table" mat-flat-button
-                                    class="flat-button button-publish" (click)="testWebService(element)">Test</button>
-                                <button style="margin-right: 5px" class="button-table" mat-flat-button
-                                    class="flat-button button-publish" (click)="edit(element)">Edit</button>
-                                <button class="button-table" mat-flat-button class="flat-button button-publish"
-                                    (click)="deleteWebServices(element)">Delete</button>
-                            </td>
-                        </ng-container> -->
-    
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
-                        <!-- <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr> -->
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns" 
-                        (mouseover)="overRow(row)" (mouseleave)="optionOver=null" (click)="selectRow(row)" 
-                        [ngClass]="{ 'selected': row === optionSelected, 'over-option': row===optionOver, 'darktable-row': row != optionSelected  }"></tr>
-                    </table>
-                </div>
-                <div class="action">
-                    <h3>Action</h3>
-                <div class="action-body">
-                    <div [ngClass]="optionSelected!=null  ? 'action-divSelec' : 'action-div'" (click)="testWebService(optionSelected)" >
-                        <div class="action-img" [ngStyle]="{'background-image': 'url(' + getBackground(optionSelected,'test') + ')'}"></div>
-                        <!-- <div class="action-img" [ngStyle]="{'background-image': 'url(' + getBackground(optionSelected,'test') + ')','transition': 'background-image 0.3s ease-in-out'}"></div> -->
-                        <!-- <img src="../assets/images/test.png"> -->
-                        <div class="action-test">Test</div>
-                    </div>
-                    <div [ngClass]="optionSelected!=null  ? 'action-divSelec' : 'action-div'" (click)="edit(optionSelected)">
-                        <div class="action-img" [ngStyle]="{'background-image': 'url(' + getBackground(optionSelected,'edit') + ')'}"></div>
-                        <!-- <img src="../assets/images/edit.png"> -->
-                        <div class="action-test">Edit</div>
-                    </div>
-                    <div [ngClass]="optionSelected!=null  ? 'action-divSelec' : 'action-div'" (click)="deleteWebServices(optionSelected)" >
-                            <div class="action-img" [ngStyle]="{'background-image': 'url(' + getBackground(optionSelected,'delete') + ')'}"></div>
-                        <!-- <img src="../assets/images/delete.png"> -->
-                        <div class="action-test">Delete</div>
-                    </div>
-                </div>
-                </div>    
-            </div>
-        </mat-card>
+    <div class="msf-menu-header headerAllWs">
+        <h1 class="ws-title">Web Services Summary</h1>
     </div>
+    <mat-card class="msf-container-table msf-center-container containerAllws">
+        <div class="containerAllws-Options">
+            <mat-form-field class="containerAllws-filter">
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+            </mat-form-field>
+            <div class="containerAllws-create" >
+                <div style="line-height: 42px">Create new Web Service</div>
+                <button mat-icon-button (click)="addWebService()">
+                    <mat-icon style="color: white" aria-label="add">add_circle</mat-icon>
+                </button>
+            </div>
+        </div>
+        <div class="table_allWebServ">
+            <table mat-table matSort [dataSource]="dataSource" class="datasource welcome-table"
+                style="font-size: 12px; padding: 0px; margin: 0px;">
+
+                <ng-container matColumnDef="columnName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                    <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="columnDescription">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+                    <td mat-cell *matCellDef="let element"> {{ element.description }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="columnQuery">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Query</th>
+                    <td mat-cell *matCellDef="let element"> {{ element.query }}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="columnTables">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Tables</th>
+                    <td mat-cell *matCellDef="let element"> {{ element.stringTable }}</td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns" (mouseover)="overRow(row)"
+                    (mouseleave)="optionOver=null" (click)="selectRow(row)"
+                    [ngClass]="{ 'selected': row === optionSelected, 'over-option': row===optionOver, 'darktable-row': row != optionSelected  }">
+                </tr>
+            </table>
+        </div>
+        <div class="action">
+            <h3>Action</h3>
+            <div class="action-body">
+                <div [ngClass]="optionSelected!=null  ? 'action-divSelec' : 'action-div'"
+                    (click)="testWebService(optionSelected)">
+                    <div class="action-img"
+                        [ngStyle]="{'background-image': 'url(' + getBackground(optionSelected,'test') + ')'}"></div>
+                    <!-- <div class="action-img" [ngStyle]="{'background-image': 'url(' + getBackground(optionSelected,'test') + ')','transition': 'background-image 0.3s ease-in-out'}"></div> -->
+                    <!-- <img class="action-img" src="../assets/images/test.png"> -->
+                    <div class="action-test">Test</div>
+                </div>
+                <div [ngClass]="optionSelected!=null  ? 'action-divSelec' : 'action-div'"
+                    (click)="edit(optionSelected)">
+                    <div class="action-img"
+                        [ngStyle]="{'background-image': 'url(' + getBackground(optionSelected,'edit') + ')'}"></div>
+                    <!-- <img src="../assets/images/edit.png"> -->
+                    <div class="action-test">Edit</div>
+                </div>
+                <div [ngClass]="optionSelected!=null  ? 'action-divSelec' : 'action-div'"
+                    (click)="deleteWebServices(optionSelected)">
+                    <div class="action-img"
+                        [ngStyle]="{'background-image': 'url(' + getBackground(optionSelected,'delete') + ')'}"></div>
+                    <!-- <img src="../assets/images/delete.png"> -->
+                    <div class="action-test">Delete</div>
+                </div>
+            </div>
+        </div>
+    </mat-card>
+</div>
