--- a/src/app/connections/connections.component.css
+++ b/src/app/connections/connections.component.css
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: row;
     padding-left: 4%;
+    align-items: center;
 }
 
 .button-form {
@@ -46,13 +47,13 @@
 }
 
 .conn-select {
-    width: 44%;
+    width: 50%;
     display: flex;
+    align-items: center;
 }
 
 .select-connection {
     width: 100% !important;
-    margin-top: 6%;
 }
 
 .show-delete {}
