--- a/src/app/web-services/web-services.component.css
+++ b/src/app/web-services/web-services.component.css
@@ -64,7 +64,7 @@ div {
     display: block;
     flex-wrap: wrap;
     max-height: 350px;
-    height: 350px;
+    height: calc(100% - 75px);
     overflow-y: scroll;
     margin-top: 10px;
     width: 90%;
