--- a/src/app/web-services/web-services.component.html
+++ b/src/app/web-services/web-services.component.html
@@ -12,7 +12,7 @@
                 <button mat-flat-button class="flat-button button-publish" style="margin: auto 15px; padding: 0px; width: 200px" (click)="saveWebService()">Publish</button>
                 <button *ngIf="showError" mat-icon-button>
                     <!-- <mat-icon class ="IconEditQuery'" (click)="openDialog(dataErrorStep)">info</mat-icon> -->
-                    <mat-icon [ngClass]="globals.DialogClose? 'IconAct' : 'IconEditQuery'" (click)="openDialog()">info</mat-icon>
+                    <mat-icon [ngClass]="globals.DialogClose? 'IconAct' : 'IconEditQuery'" (click)="openDialog(dataErrorStep)">info</mat-icon>
                 </button>
             </div>
         </div>
@@ -30,7 +30,17 @@
         <div [ngClass]="queryEdit  ? 'mostrar2' : 'ocultar2'" style="display: flex; flex-direction: row; align-items: center; background-color: #232323; height: calc(100% - 50px); padding: 30px 30px 60px 30px;">
             <!-- <div [hidden]="!queryEdit" style="height: 300px; background-color:#232323; padding: 30px"> -->
             <div *ngIf="queryEdit" style="width: 70%; margin-right: 30px;">
-                <div Style="font-weight: 500; font-size: 20px; margin: 0px 0px 20px 0px;">Query</div>
+                <div style="display: flex; flex-direction:row">
+                    <div style="font-weight: 500; font-size: 20px; margin: 0px 0px 20px 0px;">Query</div>
+                    <div style="width: 100%;margin-left: 10px;">
+                        <mat-select class="select-dark" style="width: 58%;" placeholder="Connection" autocomplete="off" (selectionChange)="changeConnection($event)" name="tables" required [(value)]=selectconcat.connection>
+                            <mat-option>--</mat-option>
+                            <mat-option *ngFor="let con of connections" [value]="con.id">
+                                {{ con.host }}:{{con.port}}/{{con.nameSchema}}
+                            </mat-option>
+                        </mat-select>
+                    </div>
+                </div>
                 <ngx-codemirror #codeEditorQuery [(ngModel)]="queryText" [options]="options" (cursorActivity)="cursorMovedQuery()">
                 </ngx-codemirror>
             </div>
@@ -62,6 +72,14 @@
                 <ng-template matStepLabel>Select Data Source</ng-template>
                 <!-- <div [hidden]="queryEdit"> -->
                 <div [ngClass]="queryEdit  ?  'ocultar': 'mostrar'" style="height: 100%; background-color:#232323; padding: 20px 30px">
+                    <div style="margin-left: 100px">
+                        <mat-select class="select-dark" style="width: 58%;" placeholder="Connection" autocomplete="off" (selectionChange)="changeConnection($event)" name="tables" required [(value)]=selectconcat.connection>
+                            <mat-option>--</mat-option>
+                            <mat-option *ngFor="let con of connections" [value]="con.id">
+                                {{ con.host }}:{{con.port}}/{{con.nameSchema}}
+                            </mat-option>
+                        </mat-select>
+                    </div>
                     <div style="display: flex !important; flex-direction: row; flex-flow: row wrap;margin-left:100px;margin-top:20px;">
                         <div style="width: 30%;">
                             <div class="box-titles">Table(s)</div>
@@ -176,7 +194,7 @@
                         <div style="width: 70%;">
                             <div style="display: flex; flex-direction: row">
                                 <div style="margin-bottom: 18px" class="box-titles">Summary</div>
-                                <input clas="placeholder-color" style="width:85%;height: 30px;background-color: #1e1e1e; margin-left: 40px; padding-left:5px; border-radius: 2px" placeholder="Add a custom function" matInput [(ngModel)]="auxCustomFunction">
+                                <input style="width:85%;height: 30px;background-color: #1e1e1e; margin-left: 40px; padding-left:5px; border-radius: 2px" placeholder="Add a expression" matInput [(ngModel)]="auxCustomFunction">
                                 <div style="display: flex; flex-direction: row;">
                                     <button mat-icon-button (click)="addCustomFunction()">
                                         <mat-icon style="color: white" aria-label="add">add_circle</mat-icon>
@@ -354,7 +372,7 @@
                         <!-- <div style="margin-bottom: 5px;"><span style="color:#01abec">Select </span>{{selectSentence}}</div> -->
                         <!-- <div style="margin-bottom: 5px;"><span style="color:#01abec">From </span>{{fromSentence}}</div> -->
                         <div style="margin-bottom: 5px;"><span style="color:#01abec">Where: </span></div>
-                        <ngx-codemirror #codeEditorWhere [(ngModel)]="whereSentence" [options]="optionsWhere" (cursorActivity)="cursorMovedWhere()"> 
+                        <ngx-codemirror #codeEditorWhere [(ngModel)]="whereSentence" [options]="optionsWhere" (cursorActivity)="cursorMovedWhere()">
                         </ngx-codemirror>
                         <div style="margin-top:20px;overflow: hidden; display: flex; flex-direction: row; flex-flow: row wrap">
                             <div style="width:60%; margin-right: 3%">
@@ -415,6 +433,10 @@
                                                 <mat-checkbox color="primary" [(ngModel)]="column.groupByBool" (change)=addGroupBy(table,column)>{{table.alias}}<span *ngIf="table.alias">.</span>{{column.name}}
                                                 </mat-checkbox>
                                             </div>
+                                        </div>
+                                        <div style="margin-bottom: 10px; margin-left:4px;" *ngFor="let exp of selectconcat.customFunctions | filter: searchGroup">
+                                            <mat-checkbox color="primary" [(ngModel)]="exp.groupByBool" (change)=addGroupByExpression(exp)>{{exp.customText}}
+                                            </mat-checkbox>
                                         </div>
                                     </div>
                                     <div *ngIf="this.selectconcat.groupingList=='1'" style="margin-bottom: 10px; margin-left:4px;">
@@ -610,7 +632,6 @@
                                             </div>
                                             <mat-divider *ngIf="item.selected && item.functionsAux.orderStd">
                                             </mat-divider>
-
                                         </div>
                                     </div>
                                 </div>
@@ -624,61 +645,12 @@
                                             <mat-option value="ASC">Asc</mat-option>
                                         </mat-select>
                                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                                 </div>
                             </div>
                         </div>
-
-
-
-
-
-
-
-
-
-
                     </div>
                 </div>
             </mat-step>
-
-
-
-
             <mat-step>
                 <ng-template matStepLabel>Service Configuration</ng-template>
                 <!-- <div [hidden]="queryEdit"> -->
@@ -695,11 +667,9 @@
                                     {{getErrorNameMessage()}}
                                 </mat-error>
                             </mat-form-field>
-
                             <mat-form-field class="server-config">
                                 <input class="server-config" value=0 placeholder="Limit" matInput [(ngModel)]="selectconcat.pageSize" name="pagination">
                             </mat-form-field>
-
                             <mat-form-field class="server-config">
                                 <input class="server-config" placeholder="Description" matInput [(ngModel)]="selectconcat.description" name="description">
                             </mat-form-field>
