--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3714,6 +3714,7 @@ textarea.mat-input-element
 
 .action-divSelec
     @extend  .action-div
+    cursor: pointer
     background-color: $msf-secondary-color 
     // transition: 1s
     .action-test
