--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,109 +1,110 @@
 <!-- <div class="general-container" style="display: flex; flex-direction: row; height: 84vh;"> -->
-        <div class="general-container" style="display: flex; flex-direction: row;">
-                <!-- <div [ngClass]="{'show-parameters': viewParameters, 'hide-parameters':!viewParameters}"
-                    style="background-color: #1e1e1e;padding-left: 15px; width: 25%; max-height: 84vh;"> -->
-                    <div [ngClass]="{'show-parameters': viewParameters, 'hide-parameters':!viewParameters}"
-                        style="background-color: #1e1e1e;padding-left: 15px; width: calc(25% - 15px);">
-                    <div style="overflow-y: auto;height:75vh">
-                        <div *ngFor="let item of arguments" style="display: flex; flex-direction: column;margin-top: 10px;">
-                            <div *ngIf="item.type=='string'" style="margin-top: 20px;">
-                                <div style="display: flex; flex-direction: column;">
-                                    <label style="width:94%;margin-bottom: 5px">{{item.label}}</label>
-                                    <input style="width:94%;height: 30px;background-color: #232323; padding-left: 5px" matInput
-                                        [(ngModel)]="item.value">
-                                </div>
-                            </div>
-            
-            
-                            <div *ngIf="item.type=='list'" style="width: 94%;overflow-x: hidden; margin-top: 5px">
-            
-                                <label style="width:94%;margin-bottom: 5px;overflow-x: hidden;">{{item.label}}</label>
-                                <div>
-                                    <mat-form-field class="example-chip-list">
-                                        <mat-chip-list #chipList style="width:90%;overflow-x: hidden;">
-                                            <mat-chip *ngFor="let arg of item.valueArray" [selectable]="selectable"
-                                                [removable]="removable" (removed)="remove(arg, item.valueArray)">
-                                                {{arg}}
-                                                <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
-                                            </mat-chip>
-                                            <input [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                                                [matChipInputAddOnBlur]="addOnBlur"
-                                                (matChipInputTokenEnd)="add($event, item.valueArray)">
-                                        </mat-chip-list>
-                                    </mat-form-field>
-                                </div>
-                            </div>
+    <div class="general-container" style="display: flex; flex-direction: row;">
+        <!-- <div [ngClass]="{'show-parameters': viewParameters, 'hide-parameters':!viewParameters}"
+            style="background-color: #1e1e1e;padding-left: 15px; width: 25%; max-height: 84vh;"> -->
+            <div [ngClass]="{'show-parameters': viewParameters, 'hide-parameters':!viewParameters}"
+                style="background-color: #1e1e1e;padding-left: 15px; width: calc(25% - 15px);">
+            <div style="overflow-y: auto;height:75vh">
+                <div *ngFor="let item of arguments" style="display: flex; flex-direction: column;margin-top: 10px;">
+                    <div *ngIf="item.type=='string'" style="margin-top: 20px;">
+                        <div style="display: flex; flex-direction: column;">
+                            <label style="width:94%;margin-bottom: 5px">{{item.label}}</label>
+                            <input style="width:94%;height: 30px;background-color: #232323; padding-left: 5px" matInput
+                                [(ngModel)]="item.value">
                         </div>
                     </div>
-                    <div style="flex: 1;margin-top: 10px; width: 94%;border-radius: 0"><button mat-flat-button style="width:100%"
-                            class="flat-button" (click)="test(1);">Test</button></div>
-            
-                </div>
-                <div style="width: 26px;background-color: #232323; display: flex" (click)="displayParameters()">
-                    <mat-icon *ngIf="viewParameters" style="color: white; margin:auto 0;" aria-label="Toogle">keyboard_arrow_left
-                    </mat-icon>
-                    <mat-icon *ngIf="!viewParameters" style="color: white; margin: auto 0" aria-label="Toogle">keyboard_arrow_right
-                    </mat-icon>
-                </div>
-                <div style="width: calc(75% - 26px); height: 100%;">
-                    <div class="msf-menu-header header-test">
-                        <h1 class="ws-title" style="flex: 1;padding-top: 5px;padding-bottom: 0px">Testing {{ws.name}}</h1>
-                        <div *ngIf="showUrl" class="ws-url">http://staging.pulse.aspsols.com:8882{{globals.currentURL}}</div>
-                    </div>
-                    <mat-card class="msf-container-table msf-center-container" style="width: calc(100% - 60px); height: calc(100% - 130px)">
-                        <div *ngIf="notFound=='0'" style="height: 100%">
-                            <!-- <mat-tab-group style="height: 400px"> -->
-                            <mat-tab-group style="height: 100%">
-                                <mat-tab *ngIf="tab==1" label="Data">
-                                    <!-- <div *ngIf="!tableOptions.dataSource && !tableOptions.template">
-                                    <div class="msf-no-results">
-                                        <span *ngIf="!isPanel">Results not available, please fill parameters and make sure they are working</span><span *ngIf="resultsOk">Results not available, </span>
-                                    </div>
-                                </div> -->
-            
-                                    <div class="test-container" *ngIf="showTable">
-                                        <table mat-table matSort [dataSource]="dataSource"
-                                            class="mat-elevation-z8 datasource welcome-table">
-            
-                                            <ng-container [matColumnDef]="column.columnName" *ngFor="let column of columns">
-                                                <th mat-header-cell class="darktable" *matHeaderCellDef mat-sort-header>
-                                                    {{column.columnLabel}}</th>
-                                                <td mat-cell *matCellDef="let element">
-                                                    {{element[column.columnName]}}
-                                                </td>
-                                            </ng-container>
-                                            <tr mat-header-row *matHeaderRowDef="displayedColumns"
-                                                style="background-color:#232323;color: white;justify-content: center"></tr>
-                                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                                        </table>
-                                    </div>
-                                    <div *ngIf="showTable" [ngClass]="globals.moreResultsBtn && !globals.isLoading? 'msf-menu-more-button' : 'msf-menu-more-button disabled-more-button'"
-                                        (click)="testMore()">
-                                        <img style="width: 16px;height: 16px;" src="../../assets/images/more.png"
-                                            class="msf-menu-image msf-vertical-middle msf-line">
-                                        <div class="msf-vertical-middle msf-line" style="font-size: 13px">More Result</div>
-                                    </div>
-            
-                                </mat-tab>
-                                <mat-tab *ngIf="tab==1" label="Json Response">
-                                    <div *ngIf="columnsHead.length >0"
-                                        style="background-color: white; overflow-y: auto; max-height: 400px">
-                                        <ngx-json-viewer [json]="data"></ngx-json-viewer>
-                                    </div>
-                                </mat-tab>
-                                <mat-tab *ngIf="tab==2" label="Errors" style="overflow-y: auto">
-                                    <div *ngIf="errors.length>0" style="margin-top: 30px">
-                                        <div *ngFor="let item of errors">
-                                            {{item}}
-                                        </div>
-                                    </div>
-                                </mat-tab>
-                            </mat-tab-group>
+    
+    
+                    <div *ngIf="item.type=='list'" style="width: 94%;overflow-x: hidden; margin-top: 5px">
+    
+                        <label style="width:94%;margin-bottom: 5px;overflow-x: hidden;">{{item.label}}</label>
+                        <div>
+                            <mat-form-field class="example-chip-list">
+                                <mat-chip-list #chipList style="width:90%;overflow-x: hidden;">
+                                    <mat-chip *ngFor="let arg of item.valueArray" [selectable]="selectable"
+                                        [removable]="removable" (removed)="remove(arg, item.valueArray)">
+                                        {{arg}}
+                                        <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                                    </mat-chip>
+                                    <input [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                        [matChipInputAddOnBlur]="addOnBlur"
+                                        (matChipInputTokenEnd)="add($event, item.valueArray)">
+                                </mat-chip-list>
+                            </mat-form-field>
                         </div>
-                        <div *ngIf="notFound=='1'">
+                    </div>
+                </div>
+            </div>
+            <div style="flex: 1;margin-top: 10px; width: 94%;border-radius: 0"><button mat-flat-button style="width:100%"
+                    class="flat-button" (click)="test(1);">Test</button></div>
+    
+        </div>
+        <div style="width: 26px;background-color: #232323; display: flex" (click)="displayParameters()">
+            <mat-icon *ngIf="viewParameters" style="color: white; margin:auto 0;" aria-label="Toogle">keyboard_arrow_left
+            </mat-icon>
+            <mat-icon *ngIf="!viewParameters" style="color: white; margin: auto 0" aria-label="Toogle">keyboard_arrow_right
+            </mat-icon>
+        </div>
+        <div style="width: calc(75% - 26px); height: 100%;">
+            <div class="msf-menu-header header-test">
+                <h1 class="ws-title" style="flex: 1;padding-top: 5px;padding-bottom: 0px">Testing {{ws.name}}</h1>
+                <!-- <div *ngIf="showUrl" class="ws-url">http://staging.pulse.aspsols.com:8882{{globals.currentURL}}</div> -->
+                <div *ngIf="showUrl" class="ws-url">{{ws.url}}</div>
+            </div>
+            <mat-card class="msf-container-table msf-center-container" style="width: calc(100% - 60px); height: calc(100% - 130px)">
+                <div *ngIf="notFound=='0'" style="height: 100%">
+                    <!-- <mat-tab-group style="height: 400px"> -->
+                    <mat-tab-group style="height: 100%">
+                        <mat-tab *ngIf="tab==1" label="Data">
+                            <!-- <div *ngIf="!tableOptions.dataSource && !tableOptions.template">
                             <div class="msf-no-results">
-                                <span>Results not available, please select your Filters and click on Test button</span>
+                                <span *ngIf="!isPanel">Results not available, please fill parameters and make sure they are working</span><span *ngIf="resultsOk">Results not available, </span>
                             </div>
-                        </div>
-                    </mat-card>
+                        </div> -->
+    
+                            <div class="test-container" *ngIf="showTable">
+                                <table mat-table matSort [dataSource]="dataSource"
+                                    class="mat-elevation-z8 datasource welcome-table">
+    
+                                    <ng-container [matColumnDef]="column.columnName" *ngFor="let column of columns">
+                                        <th mat-header-cell class="darktable" *matHeaderCellDef mat-sort-header>
+                                            {{column.columnLabel}}</th>
+                                        <td mat-cell *matCellDef="let element">
+                                            {{element[column.columnName]}}
+                                        </td>
+                                    </ng-container>
+                                    <tr mat-header-row *matHeaderRowDef="displayedColumns"
+                                        style="background-color:#232323;color: white;justify-content: center"></tr>
+                                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                </table>
+                            </div>
+                            <div *ngIf="showTable" [ngClass]="globals.moreResultsBtn && !globals.isLoading? 'msf-menu-more-button' : 'msf-menu-more-button disabled-more-button'"
+                                (click)="testMore()">
+                                <img style="width: 16px;height: 16px;" src="../../assets/images/more.png"
+                                    class="msf-menu-image msf-vertical-middle msf-line">
+                                <div class="msf-vertical-middle msf-line" style="font-size: 13px">More Result</div>
+                            </div>
+    
+                        </mat-tab>
+                        <mat-tab *ngIf="tab==1" label="Json Response">
+                            <div *ngIf="columnsHead.length >0"
+                                style="background-color: white; overflow-y: auto; max-height: 400px">
+                                <ngx-json-viewer [json]="data"></ngx-json-viewer>
+                            </div>
+                        </mat-tab>
+                        <mat-tab *ngIf="tab==2" label="Errors" style="overflow-y: auto">
+                            <div *ngIf="errors.length>0" style="margin-top: 30px">
+                                <div *ngFor="let item of errors">
+                                    {{item}}
+                                </div>
+                            </div>
+                        </mat-tab>
+                    </mat-tab-group>
                 </div>
+                <div *ngIf="notFound=='1'">
+                    <div class="msf-no-results">
+                        <span>Results not available, please select your Filters and click on Test button</span>
+                    </div>
+                </div>
+            </mat-card>
+        </div>
