--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3334,6 +3334,7 @@ img.msf-calendar-image
     background-color: #1e1e1e
     //height: 10%
     height: 50px
+    padding: 0px 20px
 
 
 .mat-stepper-horizontal,
@@ -3569,6 +3570,7 @@ textarea.mat-input-element
 .editQuery
     cursor: pointer
     width: 15%
+    padding-right: 20px
     background-color: #232323
     height: 100%
     img
@@ -3607,7 +3609,7 @@ textarea.mat-input-element
 //kp
 .InfoQuery
     margin-bottom: 15px
-    height: 207px
+    height: 183px
     font-weight: lighter
     text-align: justify
     background-color: #1e1e1e
@@ -3776,3 +3778,9 @@ textarea.mat-input-element
 
 .mat-select-placeholder
     color: #aaa
+
+.mat-checkbox-disabled .mat-checkbox-label
+    color: #333333
+
+.mat-checkbox-disabled .mat-checkbox-frame
+    border-color: #333333
